--- a/owncloudApp/src/main/res/values/styles.xml
+++ b/owncloudApp/src/main/res/values/styles.xml
@@ -268,7 +268,7 @@
 
     <style name="Theme.ownCloud.Authenticator.EditText" parent="Theme.ownCloud.Authenticator">
         <item name="colorControlNormal">@color/login_text_color</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/login_text_color</item>
     </style>
 
 </resources>
