--- a/owncloudApp/src/main/res/values/setup.xml
+++ b/owncloudApp/src/main/res/values/setup.xml
@@ -82,17 +82,15 @@
     <!-- constants that must be respected by the authorization server; if changed, the app must be rebuild -->
     <string name="oauth2_redirect_uri">oc://android.owncloud.com</string>
 
-    <!-- ownCloud server should provide service discovery url or authorization and token endpoints (see below)-->
-    <bool name="use_oauth2_service_discovery_location">false</bool>
-
-    <!-- Service discovery document, standard location -->
-    <string name="oauth2_service_discovery_location">https://oidc-workshop.owncloud-demo.com</string>
+    <!-- Service discovery document for Open Id Connect, standard location. Needed for using OIDC for now, if it is not
+    available, OAuth will be used instead -->
+    <string name="oidc_service_discovery_location"></string>
 
     <!-- AUTHORIZATION ENDPOINT -->
-    <string name="oauth2_url_endpoint_auth">https://oidc-workshop.owncloud-demo.com/signin/v1/identifier/_/authorize</string>
+    <string name="oauth2_url_endpoint_auth">index.php/apps/oauth2/authorize</string>
 
     <!-- TOKEN ENDPOINT -->
-    <string name="oauth2_url_endpoint_access">https://oidc-workshop.owncloud-demo.com/konnect/v1/token</string>
+    <string name="oauth2_url_endpoint_access">index.php/apps/oauth2/api/v1/token</string>
 
     <!-- values that should be pre-agreed between app and authorization server, but can be loaded without rebuilding the app -->
     <string name="oauth2_client_id">e4rAsNUSIUs0lF4nbv9FmCeUkTlV9GdgTLDH1b5uie7syb90SzEVrbN7HIpmWJeD</string>
