--- a/owncloudApp/src/main/res/layout/account_setup.xml
+++ b/owncloudApp/src/main/res/layout/account_setup.xml
@@ -111,7 +111,8 @@
                     android:contentDescription="@string/auth_refresh_button"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/ic_arrow_right" />
+                    android:src="@drawable/ic_arrow_right"
+                    android:tint="@color/login_text_color"/>
 
                 <ImageButton
                     android:id="@+id/embeddedRefreshButton"
@@ -139,6 +140,7 @@
                 android:minHeight="32dp"
                 android:visibility="invisible"
                 android:textColor="@color/login_connection_text_color"
+                app:drawableTint="@color/login_connection_text_color"
                 tools:text="@string/auth_testing_connection"
                 tools:visibility="visible" />
 
@@ -194,6 +196,7 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/login_credentials_text_color"
                 android:visibility="gone"
+                app:drawableTint="@color/login_credentials_text_color"
                 tools:text="@string/auth_unauthorized" />
 
             <androidx.appcompat.widget.AppCompatButton
