--- a/owncloudApp/src/main/res/layout/account_setup.xml
+++ b/owncloudApp/src/main/res/layout/account_setup.xml
@@ -30,8 +30,8 @@
         android:scaleType="centerCrop"
         android:src="@drawable/login_background_image"
         android:visibility="gone"
-        tools:visibility="visible"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <ScrollView
         android:id="@+id/scroll"
@@ -112,7 +112,7 @@
                     android:padding="0dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_arrow_right"
-                    android:tint="@color/login_text_color"/>
+                    android:tint="@color/login_text_color" />
 
                 <ImageButton
                     android:id="@+id/embeddedRefreshButton"
@@ -138,8 +138,8 @@
                 android:drawablePadding="5dp"
                 android:gravity="center_vertical"
                 android:minHeight="32dp"
-                android:visibility="invisible"
                 android:textColor="@color/login_connection_text_color"
+                android:visibility="invisible"
                 app:drawableTint="@color/login_connection_text_color"
                 tools:text="@string/auth_testing_connection"
                 tools:visibility="visible" />
@@ -180,8 +180,8 @@
                     android:layout_height="wrap_content"
                     android:drawablePadding="5dp"
                     android:hint="@string/auth_password"
-                    android:theme="@style/Theme.ownCloud.Authenticator.EditText"
-                    android:inputType="textPassword">
+                    android:inputType="textPassword"
+                    android:theme="@style/Theme.ownCloud.Authenticator.EditText">
 
                 </com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
@@ -208,7 +208,7 @@
                 android:text="@string/setup_btn_login"
                 android:theme="@style/Button.Authenticator"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
             <LinearLayout
                 android:layout_width="match_parent"
