--- a/owncloudApp/src/main/res/values/setup.xml
+++ b/owncloudApp/src/main/res/values/setup.xml
@@ -82,8 +82,8 @@
     <!-- constants that must be respected by the authorization server; if changed, the app must be rebuild -->
     <string name="oauth2_redirect_uri">oc://android.owncloud.com</string>
 
-    <!-- Service discovery document for Open Id Connect, standard location. Needed for using OIDC for now, if it is not
-    available, OAuth will be used instead -->
+    <!-- Service discovery document for Open Id Connect, path before standard location (.well-known)
+         Needed for using OIDC for now, if it is not available, OAuth will be used instead -->
     <string name="oidc_service_discovery_location"></string>
 
     <!-- AUTHORIZATION ENDPOINT -->
