--- a/owncloudApp/src/main/res/layout/sort_options_layout.xml
+++ b/owncloudApp/src/main/res/layout/sort_options_layout.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/global_margin">
+    android:layout_marginBottom="@dimen/standard_margin">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/sort_type_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/global_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         android:drawableEnd="@drawable/ic_baseline_arrow_upward"
         android:ellipsize="end"
-        android:padding="@dimen/global_padding"
+        android:padding="@dimen/standard_half_padding"
         android:text="@string/actionbar_sort_by_name"
         android:textColor="@color/primary"
-        android:textSize="16sp"
+        android:textSize="@dimen/two_line_primary_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/view_type_selector"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -26,8 +26,8 @@
         android:id="@+id/view_type_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/global_margin"
-        android:padding="@dimen/global_padding"
+        android:layout_marginEnd="@dimen/standard_margin"
+        android:padding="@dimen/standard_half_padding"
         android:src="@drawable/ic_baseline_view_list"
         android:tint="@color/primary"
         app:layout_constraintBottom_toBottomOf="@id/sort_type_selector"
