--- a/owncloudApp/src/main/res/values/dims.xml
+++ b/owncloudApp/src/main/res/values/dims.xml
@@ -17,9 +17,13 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
-    <!-- GLOBAL -->
-    <dimen name="global_margin">16dp</dimen>
-    <dimen name="global_padding">8dp</dimen>
+    <!-- STANDARD -->
+    <dimen name="standard_padding">16dp</dimen>
+    <dimen name="standard_half_padding">8dp</dimen>
+    <dimen name="standard_quarter_padding">4dp</dimen>
+    <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_half_margin">8dp</dimen>
+    <dimen name="standard_quarter_margin">4dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">@dimen/standard_padding</dimen>
@@ -48,12 +52,6 @@
     <dimen name="file_icon_size">32dp</dimen>
     <dimen name="file_icon_size_grid">128dp</dimen>
     <dimen name="file_avatar_size">128dp</dimen>
-    <dimen name="standard_padding">16dp</dimen>
-    <dimen name="standard_half_padding">8dp</dimen>
-    <dimen name="standard_quarter_padding">4dp</dimen>
-    <dimen name="standard_margin">16dp</dimen>
-    <dimen name="standard_half_margin">8dp</dimen>
-    <dimen name="standard_quarter_margin">4dp</dimen>
 
     <dimen name="two_line_primary_text_size">16sp</dimen>
     <dimen name="two_line_secondary_text_size">14sp</dimen>
