--- a/owncloudApp/src/main/res/layout/sort_options_layout.xml
+++ b/owncloudApp/src/main/res/layout/sort_options_layout.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/standard_half_margin"
+    android:layout_marginEnd="@dimen/standard_half_margin"
     android:layout_marginBottom="@dimen/standard_margin">
 
-    <com.google.android.material.textview.MaterialTextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sort_type_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/standard_margin"
-        android:drawableEnd="@drawable/ic_baseline_arrow_upward"
-        android:ellipsize="end"
         android:padding="@dimen/standard_half_padding"
-        android:text="@string/actionbar_sort_by_name"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/two_line_primary_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/view_type_selector"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/sort_type_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/two_line_primary_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/sort_type_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/global_name" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/sort_type_icon"
+            android:layout_width="@dimen/bottom_sheet_fragment_item_icon_size"
+            android:layout_height="@dimen/bottom_sheet_fragment_item_icon_size"
+            android:tint="@color/primary"
+            app:layout_constraintBottom_toBottomOf="@+id/sort_type_title"
+            app:layout_constraintStart_toEndOf="@+id/sort_type_title"
+            app:layout_constraintTop_toTopOf="@+id/sort_type_title"
+            tools:src="@drawable/ic_baseline_arrow_upward" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/view_type_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/standard_margin"
         android:padding="@dimen/standard_half_padding"
         android:src="@drawable/ic_baseline_view_list"
         android:tint="@color/primary"
