--- a/owncloudApp/src/main/res/values/dims.xml
+++ b/owncloudApp/src/main/res/values/dims.xml
@@ -57,4 +57,7 @@
     <dimen name="two_line_secondary_text_size">14sp</dimen>
 
     <dimen name="share_user_groups_width">200dp</dimen>
+
+    <!-- Bottom Sheet Fragment Item -->
+    <dimen name="bottom_sheet_fragment_item_icon_size">24dp</dimen>
 </resources>
