--- a/owncloudApp/src/main/res/values/text_appearances.xml
+++ b/owncloudApp/src/main/res/values/text_appearances.xml
@@ -7,7 +7,7 @@
     <style name="TextAppearance.OwnCloud.SortBottomSheetFragment" />
 
     <style name="TextAppearance.OwnCloud.SortBottomSheetFragment.Item">
-        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColor">@color/bottom_sheet_fragment_item_color</item>
         <item name="android:textSize">@dimen/two_line_primary_text_size</item>
     </style>
 </resources>
