Fix UI tests and add new matchers

--- a/owncloudApp/src/main/res/layout/bottom_sheet_fragment_item.xml
+++ b/owncloudApp/src/main/res/layout/bottom_sheet_fragment_item.xml
@@ -10,6 +10,7 @@
         android:id="@+id/item_icon"
         android:layout_width="@dimen/bottom_sheet_fragment_item_icon_size"
         android:layout_height="@dimen/bottom_sheet_fragment_item_icon_size"
+        android:tint="@color/bottom_sheet_fragment_item_color"
         app:layout_constraintBottom_toBottomOf="@+id/item_title"
         app:layout_constraintEnd_toStartOf="@id/item_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
         android:layout_width="@dimen/bottom_sheet_fragment_item_icon_size"
         android:layout_height="@dimen/bottom_sheet_fragment_item_icon_size"
         android:layout_marginStart="@dimen/standard_quarter_margin"
+        android:tint="@color/bottom_sheet_fragment_item_color"
         app:layout_constraintBottom_toBottomOf="@+id/item_title"
         app:layout_constraintStart_toEndOf="@id/item_title"
         app:layout_constraintTop_toTopOf="@+id/item_title"
