--- a/owncloudApp/src/main/res/layout/upload_bottom_sheet_fragment.xml
+++ b/owncloudApp/src/main/res/layout/upload_bottom_sheet_fragment.xml
@@ -1,66 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:padding="@dimen/standard_padding">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/upload_to_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/standard_half_margin"
+        android:text="@string/upload_to"
+        android:textColor="@color/bottom_sheet_fragment_item_color"
+        android:textSize="@dimen/two_line_primary_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/standard_half_margin"
+        android:background="@color/bottom_sheet_fragment_item_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upload_to_text_view" />
+
+    <com.owncloud.android.presentation.ui.common.BottomSheetFragmentItemView
+        android:id="@+id/upload_from_files_item_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:itemIcon="@drawable/bottom_sheets_files"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:title="@string/upload_files_title" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
-            android:text="@string/upload_to"
-            android:textColor="@color/grey"
-            android:id="@+id/upload_to_text_view"
-            android:textSize="15sp" />
+    <com.owncloud.android.presentation.ui.common.BottomSheetFragmentItemView
+        android:id="@+id/upload_from_camera_item_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemIcon="@drawable/bottom_sheets_camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upload_from_files_item_view"
+        app:title="@string/upload_from_camera_title" />
 
-        <LinearLayout
-            android:id="@+id/files_linear_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:src="@drawable/bottom_sheets_files" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:text="@string/upload_files_title" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/upload_from_camera_linear_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:src="@drawable/bottom_sheets_camera" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:text="@string/upload_from_camera_title" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
