Reduce a little bit arrow size in sort menu

--- a/owncloudApp/src/main/res/values/dims.xml
+++ b/owncloudApp/src/main/res/values/dims.xml
@@ -60,4 +60,5 @@
 
     <!-- Bottom Sheet Fragment Item -->
     <dimen name="bottom_sheet_fragment_item_icon_size">24dp</dimen>
+    <dimen name="bottom_sheet_fragment_arrow_icon_size">18dp</dimen>
 </resources>
