--- a/owncloudApp/src/main/res/values/colors.xml
+++ b/owncloudApp/src/main/res/values/colors.xml
@@ -66,4 +66,5 @@
 
     <!-- Bottom Sheet Fragment -->
     <color name="bottom_sheet_fragment_item_color">#6E758C</color>
+    <color name="bottom_sheet_fragment_title_color">#6E758C</color>
 </resources>
