--- a/owncloudApp/src/main/res/values/dims.xml
+++ b/owncloudApp/src/main/res/values/dims.xml
@@ -58,7 +58,12 @@
 
     <dimen name="share_user_groups_width">200dp</dimen>
 
+    <!-- File List -->
+    <dimen name="file_list_progress_bar_height">4dp</dimen>
+
     <!-- Bottom Sheet Fragment Item -->
     <dimen name="bottom_sheet_fragment_item_icon_size">24dp</dimen>
     <dimen name="bottom_sheet_fragment_arrow_icon_size">18dp</dimen>
+    <dimen name="bottom_sheet_fragment_divider_height">1dp</dimen>
+
 </resources>
