--- a/owncloudApp/src/main/res/layout/custom_playback_control.xml
+++ b/owncloudApp/src/main/res/layout/custom_playback_control.xml
@@ -82,7 +82,7 @@
             android:includeFontPadding="false"
             android:textColor="#FFBEBEBE" />
 
-        <SeekBar
+        <com.google.android.exoplayer2.ui.DefaultTimeBar
             android:id="@id/exo_progress"
             android:layout_width="0dp"
             android:layout_weight="1"
