--- a/owncloudApp/src/main/res/layout/activity_privacy_policy.xml
+++ b/owncloudApp/src/main/res/layout/activity_privacy_policy.xml
@@ -26,7 +26,7 @@
     >
 
     <include
-        layout="@layout/toolbar_standard" />
+        layout="@layout/owncloud_toolbar" />
 
     <!-- last to draw, will be top in Z axis -->
     <include layout="@layout/top_progress_bar" />
