--- a/owncloudApp/src/main/res/layout/preview_audio_fragment.xml
+++ b/owncloudApp/src/main/res/layout/preview_audio_fragment.xml
@@ -18,24 +18,19 @@
 -->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/top"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".ui.preview.PreviewAudioFragment"
     android:filterTouchesWhenObscured="true">
 
     <FrameLayout
         android:id="@+id/visual_area"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_above="@+id/media_controller"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:padding="40dp"
-        app:layout_constraintDimensionRatio="H,1:1"
+        android:padding="30dp"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,20 +54,18 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/preview_image_description"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_place_holder_music_cover_art_overlay"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:src="@drawable/ic_place_holder_music_cover_art_overlay" />
 
     </FrameLayout>
 
     <!-- last to draw, will be top in Z axis -->
     <com.owncloud.android.media.MediaControlView
-        android:id="@id/media_controller"
+        android:id="@+id/media_controller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <include layout="@layout/top_progress_bar" />
 
